--- a/public/create-account.html
+++ b/public/create-account.html
@@ -4,26 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Account - CircuLit</title>
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-    <link href="/css/tailwind.css" rel="stylesheet">
+    <style>
+        body {
+          margin: 0;
+          padding: 0;
+          background-image: url('./images/image1.png'); 
+          background-size: cover; 
+          background-repeat: no-repeat;
+          background-position: center;
+          height: 100vh;
+          font-family: sans-serif;
+        }
+      </style>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="./css/tailwind.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 flex items-center justify-center h-screen">
-    <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
-        <h2 class="text-2xl font-bold text-indigo-600 mb-6 text-center">Create Account</h2>
+    <div class="bg-transparent p-8 rounded-lg shadow-lg w-full max-w-md">
+        <!-- <h2 class="text-2xl font-bold text-indigo-600 mb-6 text-center">Create Account</h2> -->
+         <br><br>
         <div class="mb-4">
-            <label class="block text-gray-700 mb-2" for="name">Name</label>
-            <input type="text" id="name" class="w-full p-2 border rounded-lg" required>
+            <label class="block text-sky-500 mb-2" for="name">Name</label>
+            <input type="text" id="name" class="w-full p-2 border rounded-lg" placeholder="Name" required>
         </div>
         <div class="mb-4">
-            <label class="block text-gray-700 mb-2" for="email">Email</label>
-            <input type="email" id="email" class="w-full p-2 border rounded-lg" required>
+            <label class="block text-sky-500 mb-2" for="email">Email</label>
+            <input type="email" id="email" class="w-full p-2 border rounded-lg" placeholder="E-mail" required>
         </div>
         <div class="mb-6">
-            <label class="block text-gray-700 mb-2" for="password">Password</label>
-            <input type="password" id="password" class="w-full p-2 border rounded-lg" required>
+            <label class="block text-sky-500 mb-2" for="password">Password</label>
+            <input type="password" id="password" class="w-full p-2 border rounded-lg" placeholder="Password" required>
         </div>
         <button onclick="createAccount()" class="w-full bg-indigo-600 text-white p-2 rounded-lg hover:bg-indigo-700">Create Account</button>
-        <p class="mt-4 text-center">Already have an account? <a href="/login" class="text-indigo-600 hover:underline">Login</a></p>
+        <p class="mt-4 text-center text-zinc-300">Already have an account? <a href="./login.html" class="text-indigo-600 hover:underline">Login</a></p>
     </div>
     <script>
         async function createAccount() {
