--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CircuLit: Think, Tackle, Triumph</title>
+    <style>
+        body {
+          margin: 0;
+          padding: 0;
+          background-image: url('./images/image.png'); 
+          background-size: cover; 
+          background-repeat: no-repeat;
+          background-position: center;
+          height: 100vh;
+          font-family: sans-serif;
+        }
+      </style>
   <link href="/css/tailwind.css" rel="stylesheet">
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center h-screen">
     <div class="text-center">
-        <h1 class="text-4xl font-bold text-indigo-600 mb-8">CircuLit: Think, Tackle, Triumph</h1>
-        <a href="/login" class="bg-indigo-600 text-white px-6 py-3 rounded-lg hover:bg-indigo-700">Go to Login</a>
+        <h1 class="text-4xl font-bold text-cyan-400 mb-8">CircuLit: Think, Tackle, Triumph</h1>
+        <a href="./login.html" class="bg-indigo-600 text-white px-6 py-3 rounded-lg hover:bg-indigo-700">Go to Login</a>
     </div>
 </body>
 </html>
