--- a/public/login.html
+++ b/public/login.html
@@ -4,22 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - CircuLit</title>
+    <style>
+        body {
+          margin: 0;
+          padding: 0;
+          background-image: url('./images/image1.png'); 
+          background-size: cover; 
+          background-repeat: no-repeat;
+          background-position: center;
+          height: 100vh;
+          font-family: sans-serif;
+        }
+      </style>
    <link href="/css/tailwind.css" rel="stylesheet">
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center h-screen">
-    <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
-        <h2 class="text-2xl font-bold text-indigo-600 mb-6 text-center">Login</h2>
+    <div class="bg-tr p-8 rounded-lg shadow-lg w-full max-w-md">
+        <!-- <h2 class="text-2xl font-bold text-sky-600 mb-6 text-center">Login</h2> -->
         <div class="mb-4">
-            <label class="block text-gray-700 mb-2" for="email">Email</label>
-            <input type="email" id="email" class="w-full p-2 border rounded-lg" required>
+            <label class="block text-sky-500 mb-2" for="email">Email</label>
+            <input type="email" id="email" class="w-full p-2 border rounded-lg" placeholder="E-mail" required>
         </div>
         <div class="mb-6">
-            <label class="block text-gray-700 mb-2" for="password">Password</label>
-            <input type="password" id="password" class="w-full p-2 border rounded-lg" required>
+            <label class="block text-sky-400 mb-2" for="password">Password</label>
+            <input type="password" id="password" class="w-full p-2 border rounded-lg" placeholder="Password" required>
         </div>
         <button onclick="login()" class="w-full bg-indigo-600 text-white p-2 rounded-lg hover:bg-indigo-700">Login</button>
-        <p class="mt-4 text-center">Don't have an account? <a href="/create-account" class="text-indigo-600 hover:underline">Create one</a></p>
+        <p class="mt-4 text-center text-zinc-300">Don't have an account? <a href="./create-account.html" class="text-indigo-600 hover:underline">Create one</a></p>
     </div>
     <script>
         async function login() {
