--- a/public/login.html
+++ b/public/login.html
@@ -31,7 +31,7 @@
             <input type="password" id="password" class="w-full p-2 border rounded-lg" placeholder="Password" required>
         </div>
         <button onclick="login()" class="w-full bg-indigo-600 text-white p-2 rounded-lg hover:bg-indigo-700">Login</button>
-        <p class="mt-4 text-center text-zinc-300">Don't have an account? <a href="./create-account.html" class="text-indigo-600 hover:underline">Create one</a></p>
+        <p class="mt-4 text-center text-zinc-300">Don't have an account? <a href="/create-account" class="text-indigo-600 hover:underline">Create one</a></p>
     </div>
     <script>
         async function login() {
