--- a/public/create-account.html
+++ b/public/create-account.html
@@ -24,15 +24,15 @@
         <!-- <h2 class="text-2xl font-bold text-indigo-600 mb-6 text-center">Create Account</h2> -->
          <br><br>
         <div class="mb-4">
-            <label class="block text-sky-500 mb-2" for="name">Name</label>
+            <label class="block text-sky-500 mb-2" for="name"></label>
             <input type="text" id="name" class="w-full p-2 border rounded-lg" placeholder="Name" required>
         </div>
         <div class="mb-4">
-            <label class="block text-sky-500 mb-2" for="email">Email</label>
+            <label class="block text-sky-500 mb-2" for="email"></label>
             <input type="email" id="email" class="w-full p-2 border rounded-lg" placeholder="E-mail" required>
         </div>
         <div class="mb-6">
-            <label class="block text-sky-500 mb-2" for="password">Password</label>
+            <label class="block text-sky-500 mb-2" for="password"></label>
             <input type="password" id="password" class="w-full p-2 border rounded-lg" placeholder="Password" required>
         </div>
         <button onclick="createAccount()" class="w-full bg-indigo-600 text-white p-2 rounded-lg hover:bg-indigo-700">Create Account</button>
