--- a/public/login.html
+++ b/public/login.html
@@ -23,11 +23,11 @@
     <div class="bg-tr p-8 rounded-lg shadow-lg w-full max-w-md">
         <!-- <h2 class="text-2xl font-bold text-sky-600 mb-6 text-center">Login</h2> -->
         <div class="mb-4">
-            <label class="block text-sky-500 mb-2" for="email">Email</label>
+            <label class="block text-white mb-2" for="email"></label>
             <input type="email" id="email" class="w-full p-2 border rounded-lg" placeholder="E-mail" required>
         </div>
         <div class="mb-6">
-            <label class="block text-sky-400 mb-2" for="password">Password</label>
+            <label class="block text-sky-400 mb-2" for="password"></label>
             <input type="password" id="password" class="w-full p-2 border rounded-lg" placeholder="Password" required>
         </div>
         <button onclick="login()" class="w-full bg-indigo-600 text-white p-2 rounded-lg hover:bg-indigo-700">Login</button>
