dotenv file added

--- a/public/create-account.html
+++ b/public/create-account.html
@@ -36,7 +36,7 @@
             <input type="password" id="password" class="w-full p-2 border rounded-lg" placeholder="Password" required>
         </div>
         <button onclick="createAccount()" class="w-full bg-indigo-600 text-white p-2 rounded-lg hover:bg-indigo-700">Create Account</button>
-        <p class="mt-4 text-center text-zinc-300">Already have an account? <a href="/login" class="text-indigo-600 hover:underline">Login</a></p>
+        <p class="mt-4 text-center text-white">Already have an account? <a href="/login" class="text-indigo-600 hover:underline">Login</a></p>
     </div>
     <script>
         async function createAccount() {
