--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 </head>
 <body class="bg-gray-100 flex items-center justify-center h-screen">
     <div class="text-center">
-        <h1 class="text-4xl font-bold text-cyan-400 mb-8">CircuLit: Think, Tackle, Triumph</h1>
+        <h1 class="text-white font-bold text-cyan-400 mb-8">CircuLit: Think, Tackle, Triumph</h1>
         <a href="/login" class="bg-indigo-600 text-white px-6 py-3 rounded-lg hover:bg-indigo-700">Go to Login</a>
     </div>
 </body>
