--- a/public/create-account.html
+++ b/public/create-account.html
@@ -23,23 +23,42 @@
     <div class="bg-transparent p-8 rounded-lg shadow-lg w-full max-w-md">
         <!-- <h2 class="text-2xl font-bold text-indigo-600 mb-6 text-center">Create Account</h2> -->
          <br><br>
-        <div class="mb-4">
-            <label class="block text-sky-500 mb-2" for="name"></label>
-            <input type="text" id="name" class="w-full p-2 border rounded-lg" placeholder="Name" required>
-        </div>
-        <div class="mb-4">
-            <label class="block text-sky-500 mb-2" for="email"></label>
-            <input type="email" id="email" class="w-full p-2 border rounded-lg" placeholder="E-mail" required>
-        </div>
-        <div class="mb-6">
-            <label class="block text-sky-500 mb-2" for="password"></label>
-            <input type="password" id="password" class="w-full p-2 border rounded-lg" placeholder="Password" required>
-        </div>
-        <button onclick="createAccount()" class="w-full bg-indigo-600 text-white p-2 rounded-lg hover:bg-indigo-700">Create Account</button>
+         <form onsubmit="createAccount(event)">
+            <div class="mb-4">
+                <input type="text" id="name" class="w-full p-2 border rounded-lg" placeholder="Name" required>
+            </div>
+            <div class="mb-4">
+                <input type="email" id="email" class="w-full p-2 border rounded-lg" placeholder="E-mail" required>
+            </div>
+            <div class="mb-6">
+                <input type="password" id="password" class="w-full p-2 border rounded-lg" placeholder="Password" required>
+            </div>
+            <button type="submit" class="w-full bg-indigo-600 text-white p-2 rounded-lg hover:bg-indigo-700">Create Account</button>
+        </form>
         <p class="mt-4 text-center text-white">Already have an account? <a href="/login" class="text-indigo-600 hover:underline">Login</a></p>
     </div>
+    <div id="toast" class="hidden fixed top-5 right-5 bg-red-600 text-white px-4 py-2 rounded-lg shadow-lg z-50 transition-opacity duration-300">
+        <span id="toast-message"></span>
+    </div>
     <script>
+        function showToast(message,type='error',duration) {
+        const toast = document.getElementById('toast');
+        const toastMsg = document.getElementById('toast-message');
+        toastMsg.textContent = message;
+        toast.className = `fixed top-5 right-5 px-4 py-2 rounded-lg shadow-lg z-50 transition-opacity duration-300 text-white ${
+        type === 'success' ? 'bg-green-600' : 'bg-red-600'
+    }`;
+        setTimeout(() => {
+        toast.classList.add('hidden');
+        }, duration);
+    }
         async function createAccount() {
+            event.preventDefault();
+            const form = event.target;
+            if (!form.checkValidity()) {
+                form.reportValidity();
+                return;
+            }
             const name = document.getElementById('name').value;
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
@@ -49,11 +68,14 @@
                 body: JSON.stringify({ name, email, password })
             });
             const result = await response.json();
+            const succesTime=2000
             if (response.ok) {
-                alert('Account created! Please login.');
-                window.location.href = '/login';
+                showToast('Account created! Redirecting to login...', 'success', succesTime);
+                setTimeout(() => {
+                    window.location.href = '/login';
+                }, succesTime);
             } else {
-                alert(result.message);
+                showToast(result.message, 'error', 4000); 
             }
         }
     </script>
