--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center h-screen">
-    <div class="text-center">
-        <h1 class="text-white font-bold text-cyan-400 mb-8">CircuLit: Think, Tackle, Triumph</h1>
-        <a href="/login" class="bg-indigo-600 text-white px-6 py-3 rounded-lg hover:bg-indigo-700">Go to Login</a>
-    </div>
+  <div class="text-center">
+      <h1 class="text-4xl font-extrabold text-cyan-400 mb-8">CircuLit: Think, Tackle, Triumph</h1>
+      <a href="/login" class="bg-indigo-600 text-white px-6 py-3 rounded-lg hover:bg-indigo-700">Get Started</a>
+  </div>
 </body>
 </html>
