--- a/public/quiz.html
+++ b/public/quiz.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Quiz - CircuLit</title>
-    <link href="./css/tailwind.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script> 
 </head>
-<body class=" p-8">
-    <div class="bg-blue-950">
+<body class="p-8 bg-gray-900 text-white"> 
     <div class="max-w-4xl mx-auto">
-        <h1 class="text-3xl font-bold text-indigo-600 mb-6 text-center">CircuLit Quiz</h1>
+        <h1 class="text-3xl font-bold text-lime-300 mb-6 text-center">CircuLit Quiz</h1>
         <div id="quiz">
             <div class="mb-8">
                 <img src="./questions/image.png" alt="Question 1" class="w-full max-w-md mx-auto mb-4">
@@ -33,37 +32,32 @@
             </div>
             <br>
         </div>
-        <button id="submitButton" onclick="askToSubmitQuiz()" class="w-full bg-indigo-600 text-white p-2 rounded-lg hover:bg-indigo-700">Submit Answers</button>
-        <p id="score" class="text-center mt-4 text-lg"></p>
+        <button id="submitButton" onclick="askToSubmitQuiz()" class="w-full bg-lime-300 text-gray-900 p-2 rounded-lg hover:bg-lime-500">Submit Answers</button>
+        <p id="score" class="text-center mt-4 text-lg text-lime-300"></p> 
     </div>
-    </div>
-    <script>
 
+    <script>
         async function askToSubmitQuiz(){
             var wantToSubmit = confirm("Are you sure, You want to submit");
             if(wantToSubmit){
                 submitQuiz();
             }
         }
-        async function submitQuiz() {
 
+        async function submitQuiz() {
             const answers = {
                 answer1: document.getElementById('answer1').value,
                 answer2: document.getElementById('answer2').value,
                 answer3: document.getElementById('answer3').value,
                 answer4: document.getElementById('answer4').value,
                 answer5: document.getElementById('answer5').value
-
             };
             const userId = localStorage.getItem('userId');
             const submitButton = document.getElementById('submitButton');
 
             try {
-                // Disable button during submission
                 submitButton.disabled = true;
-
                 submitButton.classList.add('opacity-50', 'cursor-not-allowed');
-                    console.log('before response');
                 const response = await fetch('/submit-quiz', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
@@ -72,28 +66,20 @@
                 const result = await response.json();
 
                 if (response.ok) {
-                    // Display score and success message
                     document.getElementById('score').textContent = `Your score: ${result.score}`;
-                    // Keep button disabled
-                    submitButton.disabled = true;
                     submitButton.classList.add('opacity-50', 'cursor-not-allowed');
-                    // Hide quiz form
                     document.getElementById('quiz').style.display = 'none';
-                    // Show success message
                     const message = document.createElement('p');
                     message.textContent = result.message || 'Quiz submitted successfully!';
-                    message.className = 'text-center text-green-600 mt-4';
+                    message.className = 'text-center text-green-500 mt-4';
                     document.querySelector('.max-w-4xl').appendChild(message);
                 } else {
-                    // Re-enable button on error
                     submitButton.disabled = false;
                     submitButton.classList.remove('opacity-50', 'cursor-not-allowed');
-                    // Display error message
                     document.getElementById('score').textContent = result.score ? `Your score: ${result.score}` : '';
                     alert(result.message);
                 }
             } catch (error) {
-                // Re-enable button on network error
                 submitButton.disabled = false;
                 submitButton.classList.remove('opacity-50', 'cursor-not-allowed');
                 alert('Error submitting quiz: ' + error.message);
