--- a/public/quiz.html
+++ b/public/quiz.html
@@ -35,15 +35,22 @@
         <button id="submitButton" onclick="askToSubmitQuiz()" class="w-full bg-lime-300 text-gray-900 p-2 rounded-lg hover:bg-lime-500">Submit Answers</button>
         <p id="score" class="text-center mt-4 text-lg text-lime-300"></p> 
     </div>
-
+    <div id="confirmation" class="fixed inset-0 bg-black bg-opacity-60 backdrop-blur-sm flex items-center justify-center z-50 hidden">
+        <div class="bg-gray-800 text-white rounded-lg p-6 max-w-sm w-full shadow-lg">
+            <h2 class="text-xl font-bold mb-4">Are you sure you want to submit?</h2>
+            <div class="flex justify-end space-x-4">
+                <button onclick="hidepopup()" class="px-4 py-2 bg-gray-300 rounded text-gray-800 hover:bg-gray-400">Cancel</button>
+                <button onclick="submitQuiz()" class="px-4 py-2 bg-lime-300 rounded text-gray-800 hover:bg-lime-400">Yes, Submit!</button>
+            </div>
+        </div>
+    </div>
     <script>
         async function askToSubmitQuiz(){
-            var wantToSubmit = confirm("Are you sure, You want to submit");
-            if(wantToSubmit){
-                submitQuiz();
-            }
+            document.getElementById("confirmation").classList.remove("hidden");
         }
-
+        async function hidepopup() {
+            document.getElementById("confirmation").classList.add("hidden");
+        }
         async function submitQuiz() {
             const answers = {
                 answer1: document.getElementById('answer1').value,
