--- a/public/quiz.html
+++ b/public/quiz.html
@@ -12,23 +12,23 @@
         <div id="quiz">
             <div class="mb-8">
                 <img src="./questions/image.png" alt="Question 1" class="w-full max-w-md mx-auto mb-4">
-                <input type="text" id="answer1" class="w-full p-2 border rounded-lg" placeholder="Enter your answer">
+                <input type="text" id="answer1" class="w-full p-2 border text-black rounded-lg" placeholder="Enter your answer">
             </div>
             <div class="mb-8">
                 <img src="./questions/image.png" alt="Question 2" class="w-full max-w-md mx-auto mb-4">
-                <input type="text" id="answer2" class="w-full p-2 border rounded-lg" placeholder="Enter your answer">
+                <input type="text" id="answer2" class="w-full p-2 border text-black rounded-lg" placeholder="Enter your answer">
             </div>
             <div class="mb-8">
                 <img src="./questions/image.png" alt="Question 3" class="w-full max-w-md mx-auto mb-4">
-                <input type="text" id="answer3" class="w-full p-2 border rounded-lg" placeholder="Enter your answer">
+                <input type="text" id="answer3" class="w-full p-2 border text-black rounded-lg" placeholder="Enter your answer">
             </div>
             <div class="mb-8">
                 <img src="./questions/image.png" alt="Question 4" class="w-full max-w-md mx-auto mb-4">
-                <input type="text" id="answer4" class="w-full p-2 border rounded-lg" placeholder="Enter your answer">
+                <input type="text" id="answer4" class="w-full p-2 border text-black rounded-lg" placeholder="Enter your answer">
             </div>
             <div class="mb-8">
                 <img src="./questions/image.png" alt="Question 5" class="w-full max-w-md mx-auto mb-4">
-                <input type="text" id="answer5" class="w-full p-2 border rounded-lg" placeholder="Enter your answer">
+                <input type="text" id="answer5" class="w-full p-2 border text-black rounded-lg" placeholder="Enter your answer">
             </div>
             <br>
         </div>
