--- a/public/create-account.html
+++ b/public/create-account.html
@@ -15,6 +15,18 @@
           height: 100vh;
           font-family: sans-serif;
         }
+        /* @media (max-width: 600px) {
+          body {
+          margin: 0;
+          padding: 0;
+          background-image: url('./images/image1Rotated.png'); 
+          background-size: cover; 
+          background-repeat: no-repeat;
+          background-position: center;
+          height: 100vh;
+          font-family: sans-serif;
+          }
+        } */
       </style>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="./css/tailwind.css" rel="stylesheet">
