--- a/public/quiz.html
+++ b/public/quiz.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="max-w-4xl mx-auto">
-        <h1 class="text-3xl font-bold text-lime-300 mb-6 text-center">CircuLit Quiz</h1>
+        <h1 class="text-2xl font-bold text-lime-300 mb-6 text-left">CircuLit Quiz</h1>
         <div id="quiz">
             <div class="mb-8">
                 <img src="./questions/image.png" alt="Question 1" class="w-full max-w-md mx-auto mb-4">
