--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center h-screen">
-  <div class="text-center">
+  <img src="./images/nisb.png" class="h-20 w-20 sm:h-28 sm:w-28 z-50 absolute top-4 left-4" alt="nisb logo">
+  <img src="./images/cas.png" alt="cas logo" class="h-16 w-16 sm:h-24 sm:w-24 z-50 absolute top-4 right-4">
+  <div class="text-center pb-24"><img src="./images/Illume.png" alt="" class="scale-50">
       <h1 class="text-4xl font-extrabold text-cyan-400 mb-8">CircuLit: Think, Tackle, Triumph</h1>
       <a href="/login" class="bg-indigo-600 text-white px-6 py-3 rounded-lg hover:bg-indigo-700">Get Started</a>
   </div>
+  
 </body>
 </html>
