--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         body {
           margin: 0;
           padding: 0;
-          background-image: url('./images/image.png'); 
+          background-image: url('./images/background.png'); 
           background-size: cover; 
           background-repeat: no-repeat;
           background-position: center;
