--- a/public/quiz.html
+++ b/public/quiz.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
    <style>
         body {
-            background-image: url('./images/background.png');
+            background-image: url('https://images.unsplash.com/photo-1550751827-4bd374c3f58b?q=80&w=2070&auto=format&fit=crop');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
